# hub-nfts-polygon

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: release.yml
consumer/: Cargo.toml  build.rs  proto.toml
consumer/src/: db.rs  events.rs  lib.rs  main.rs
core/: Cargo.toml  proto.toml
core/src/: collections.rs  lib.rs  mints.rs  services.rs  try_from.rs
entity/: Cargo.toml
entity/src/: collections.rs  lib.rs  mints.rs  mod.rs  prelude.rs
evm-contracts-build/: Cargo.toml
evm-contracts-build/src/: lib.rs
indexer/: Cargo.toml
indexer/src/: error.rs  handler.rs  lib.rs  main.rs  types.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230608_110420_create_collections_table.rs  m20230608_110425_create_mints_table.rs  m20230618_140219_add_name_to_collections.rs  m20230710_195615_change_address_columns_to_citext.rs
