[package]
name = "holaplex-hub-nfts-polygon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[lib]

[dependencies]
prost = "0.11.6"
ethers = "2.0.4"
holaplex-hub-nfts-polygon-core = { path = "../core" }
holaplex-hub-nfts-polygon-entity = { path = "../entity" }

[dependencies.hub-core]
package = "holaplex-hub-core"
version = "0.2.0"
git = "https://github.com/holaplex/hub-core"
branch = "stable"
features = ["kafka"]

[build-dependencies.hub-core-build]
package = "holaplex-hub-core-build"
version = "0.2.0"
git = "https://github.com/holaplex/hub-core"
branch = "stable"

[build-dependencies.evm-contracts-build]
path = "../evm-contracts-build"