[package]
name = "holaplex-hub-nfts-polygon"
version = "0.1.0"
edition = "2021"
keywords = ["polygon", "hub", "holaplex", "core"]
publish = false
authors = [
  "Holaplex <engineering@holaplex.com>",
]
description = "Holaplex Hub nfts polygon service"
readme = "./README.md"
repository = "https://github.com/holaplex/hub-nfts-polygon"
license = "AGPL-3.0-or-later"
categories = ["cryptography::cryptocurrencies", "web-programming"]

[lib]

[dependencies]
prost = "0.11.6"
ethers = "2.0.7"
holaplex-hub-nfts-polygon-core = { path = "../core" }
holaplex-hub-nfts-polygon-entity = { path = "../entity" }

[dependencies.hub-core]
package = "holaplex-hub-core"
version = "0.2.0"
git = "https://github.com/holaplex/hub-core"
branch = "stable"
features = ["kafka"]

[build-dependencies.hub-core-build]
package = "holaplex-hub-core-build"
version = "0.2.0"
git = "https://github.com/holaplex/hub-core"
branch = "stable"