[package]
name = "holaplex-hub-nfts-polygon-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
holaplex-hub-nfts-polygon-entity = { path = "../entity" }
sea-orm = { version = "^0.10.0", features = [
  "debug-print",
  "runtime-tokio-rustls",
  "sqlx-postgres",
] }
