[package]
name = "holaplex-hub-nfts-polygon-core"
version = "0.1.0"
edition = "2021"
keywords = ["polygon", "hub", "holaplex", "core"]
publish = false
authors = [
  "Holaplex <engineering@holaplex.com>",
]
description = "Holaplex Hub nfts polygon service"
readme = "./README.md"
repository = "https://github.com/holaplex/hub-nfts-polygon"
license = "AGPL-3.0-or-later"
categories = ["cryptography::cryptocurrencies", "web-programming"]

build = "build.rs"

[dependencies]
holaplex-hub-nfts-polygon-entity = { path = "../entity" }
sea-orm = { version = "0.11.3", features = [
  "debug-print",
  "runtime-tokio-rustls",
  "sqlx-postgres",
] }
prost = "0.11.6"
ethers = "2.0.4"
prost-types = "0.11.9"

[dependencies.hub-core]
package = "holaplex-hub-core"
version = "0.2.1"
git = "https://github.com/holaplex/hub-core"
branch = "stable"
features = []

[build-dependencies.hub-core-build]
package = "holaplex-hub-core-build"
version = "0.2.1"
git = "https://github.com/holaplex/hub-core"
branch = "stable"

[build-dependencies.evm-contracts-build]
path = "../evm-contracts-build"
