[package]
name = "holaplex-hub-nfts-polygon-entity"
version = "0.1.0"
edition = "2021"
keywords = ["polygon", "hub", "entities"]
publish = false
authors = [
  "Holaplex <engineering@holaplex.com>",
]
description = "Holaplex Hub nfts polygon service"
readme = "./README.md"
repository = "https://github.com/holaplex/hub-nfts-polygon"
license = "AGPL-3.0-or-later"
categories = ["cryptography::cryptocurrencies", "web-programming"]


[dependencies]
serde = { version = "1", features = ["derive"] }
sea-orm = { version = "^0.10.0", features = [
  "debug-print",
  "runtime-tokio-rustls",
  "sqlx-postgres",
] }
