[package]
name = "evm-contracts-build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.4"
tokio = { version = "1", features = ["macros"] }
eyre = "0.6"
reqwest = { version = "0.11.18" }