[package]
name = "evm-contracts-build"
version = "0.1.0"
edition = "2021"
keywords = ["evm", "ethereum", "contracts", "build"]
publish = false
authors = [
  "Holaplex <engineering@holaplex.com>",
]
description = "Holaplex Hub nfts polygon service"
readme = "./README.md"
repository = "https://github.com/holaplex/hub-nfts-polygon"
license = "AGPL-3.0-or-later"
categories = ["cryptography::cryptocurrencies", "web-programming"]

[dependencies]
ethers = "2.0.7"
tokio = { version = "1", features = ["macros"] }
eyre = "0.6"
reqwest = { version = "0.11.18" }