[package]
name = "holaplex-hub-nfts-polygon-indexer"
version = "0.1.0"
edition = "2021"
keywords = ["polygon", "hub", "indexer"]
publish = false
authors = [
  "Holaplex <engineering@holaplex.com>",
]
description = "Holaplex Hub nfts polygon service"
readme = "./README.md"
repository = "https://github.com/holaplex/hub-nfts-polygon"
license = "AGPL-3.0-or-later"
categories = ["cryptography::cryptocurrencies", "web-programming"]


[dependencies]
poem = { version = "1.3.56", features = ["anyhow"] }
tokio = "1"
serde = { version = "1.0.164", features = ["derive"] }
holaplex-hub-nfts-polygon-core = { path = "../core" }
holaplex-hub-nfts-polygon-entity = { path = "../entity" }

[dependencies.hub-core]
package = "holaplex-hub-core"
version = "0.2.0"
git = "https://github.com/holaplex/hub-core"
branch = "stable"
features = ["kafka"]

